tests/machine/x/fs/exists_builtin.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:26:42Z
open System

let data: int list = [1; 2]
let flag: obj = not (List.isEmpty [ for x in data do if x = 1 then yield x ])
printfn "%A" flag
